--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <div class="social-menu">
                   <ul>
                     <li><a href="https://github.com/somuakash"><i class="fa-brands fa-github"></i></a></li>
-                    <li><a href="www.linkedin.com/in/somasundaram-r-49ba48264 "><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/somasundaram-r-49ba48264"><i class="fa-brands fa-linkedin-in"></i></a></li>
                     <li><a href="https://www.instagram.com/somu_akash?igsh=NXdyOTR1eGZzZmMx"><i class="fa-brands fa-instagram"></i></a></li>
                     <li><a href="https://x.com/somu_akash9626?t=yTmHVButzf2g6H2HVPi-zA&s=09"><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="#" title="Get Educate with Us"><i class="fa-solid fa-graduation-cap"></i></a></li>
