--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <li class="project">eCommerce Website (ShopLane, HTML, CSS, JS)</li>
                 <li class="project">Nuuk App - eCommerce Website (Like Company Website)</li>
                 <li class="project">Kafene App - Pharmacy Store Management</li>
-                <li class="project">IPL Gaming Website (Nodejs,mongodb,expressjs)</li>
+                <!--<li class="project">IPL Gaming Website (Nodejs,mongodb,expressjs)</li>-->
                 <li class="project">Currently Working on a Admin Pannel App (Like People Connect using React,Nodejs)</li>
               </p>
 
